# wxFormBuilder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  msys2.yml  windows.yml
plugins/: CMakeLists.txt
plugins/additional/: CMakeLists.txt
plugins/common/: CMakeLists.txt
plugins/containers/: CMakeLists.txt
plugins/forms/: CMakeLists.txt
plugins/layout/: CMakeLists.txt
sdk/plugin_interface/: CMakeLists.txt
src/: CMakeLists.txt
src/rad/: dialogfindcomponent.cpp  dialogfindcomponent.h  mainframe.cpp  mainframe.h  palette.h
src/rad/designer/: visualeditor.cpp
src/rad/inspector/: objinspect.cpp
